--- a/01-fundamentos/index.html
+++ b/01-fundamentos/index.html
@@ -23,7 +23,9 @@
     <!-- <script src="./assets/js/objeto-literal.js"></script> -->
     <!-- <script src="./assets/js/funciones.js"></script> -->
     <!-- <script src="./assets/js/protip-retorno.js"></script> -->
-    <script src="./assets/js/valor-referencia.js"></script>
+    <!-- <script src="./assets/js/valor-referencia.js"></script> -->
+    <!-- <script src="./assets/js/if-else.js"></script> -->
+    <script src="./assets/js/laboratorio-alternativa-if-else.js"></script>
 </body>
 
 </html>
