--- a/01-fundamentos/index.html
+++ b/01-fundamentos/index.html
@@ -28,7 +28,8 @@
     <!-- <script src="./assets/js/laboratorio-alternativa-if-else.js"></script> -->
     <!-- <script src="./assets/js/logica-booleana.js"></script> -->
     <!-- <script src="./assets/js/operador-ternario.js"></script> -->
-    <script src="./assets/js/protip-ternario.js"></script>
+    <!-- <script src="./assets/js/protip-ternario.js"></script> -->
+    <script src="./assets/js/switch.js"></script>
 </body>
 
 </html>
