--- a/01-fundamentos/index.html
+++ b/01-fundamentos/index.html
@@ -14,22 +14,7 @@
     <hr>
     <p>dadada</p>
 
-
-    <!-- <script src="./assets/js/app.js"></script> -->
-    <!--  <script src="./assets/js/alert.js"></script> -->
-    <!-- <script src="./assets/js/primitivos.js"></script> -->
-    <!-- <script src="./assets/js/arreglos.js"></script> -->
-    <!--     <script src="./assets/js/arreglos2.js"></script> -->
-    <!-- <script src="./assets/js/objeto-literal.js"></script> -->
-    <!-- <script src="./assets/js/funciones.js"></script> -->
-    <!-- <script src="./assets/js/protip-retorno.js"></script> -->
-    <!-- <script src="./assets/js/valor-referencia.js"></script> -->
-    <!-- <script src="./assets/js/if-else.js"></script> -->
-    <!-- <script src="./assets/js/laboratorio-alternativa-if-else.js"></script> -->
-    <!-- <script src="./assets/js/logica-booleana.js"></script> -->
-    <!-- <script src="./assets/js/operador-ternario.js"></script> -->
-    <!-- <script src="./assets/js/protip-ternario.js"></script> -->
-    <script src="./assets/js/switch.js"></script>
+    <script src="assets/js/ciclos/while-do-while.js"></script>
 </body>
 
 </html>
