--- a/01-fundamentos/index.html
+++ b/01-fundamentos/index.html
@@ -14,7 +14,8 @@
     <hr>
     <p>dadada</p>
 
-    <script src="assets/js/ciclos/while-do-while.js"></script>
+    <!-- <script src="assets/js/ciclos/while-do-while.js"></script> -->
+    <script src="assets/js/ciclos/for.js"></script>
 </body>
 
 </html>
