seccion subclases o clases extendidas

--- a/01-fundamentos/index.html
+++ b/01-fundamentos/index.html
@@ -15,7 +15,7 @@
     <p>dadada</p>
 
     <!-- <script src="assets/js/ciclos/while-do-while.js"></script> -->
-    <script src="assets/js/classes/class.js"></script>
+    <script src="assets/js/classes/sub-classes.js"></script>
 </body>
 
 </html>
